fix bug scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -16,7 +16,12 @@
           }
 
           .admin-main {
-               border: 1px solid red;
+               height: calc(100vh - 40px);
+               // margin-bottom: 10px;
+               .user-pagination {
+                    display: flex;
+                    justify-content: center;
+               }
           }
      }
 }
