--- a/src/components/Admin/Content/Quiz/ManageQuiz.scss
+++ b/src/components/Admin/Content/Quiz/ManageQuiz.scss
@@ -7,7 +7,7 @@
      legend {
           font-size: 13px;
      }
-     table {
+     .list-detail {
           padding: 15px;
      }
 }
